--- a/configurations.yaml
+++ b/configurations.yaml
@@ -354,4 +354,173 @@ linear_15parents_pos_65:
   hidden_layers: 0
   activation: 'relu'
   use_positional: true
+  image_resolution: [65, 65]
+
+# Medium model variants with SiLU activation
+# 20x20
+medium_3parents_silu_20:
+  connectivity: 3
+  hidden_layers: 2
+  activation: 'silu'
+  use_positional: false
+  image_resolution: [20, 20]
+
+medium_3parents_silu_pos_20:
+  connectivity: 3
+  hidden_layers: 2
+  activation: 'silu'
+  use_positional: true
+  image_resolution: [20, 20]
+
+# 40x40
+medium_3parents_silu_40:
+  connectivity: 3
+  hidden_layers: 2
+  activation: 'silu'
+  use_positional: false
+  image_resolution: [40, 40]
+
+medium_3parents_silu_pos_40:
+  connectivity: 3
+  hidden_layers: 2
+  activation: 'silu'
+  use_positional: true
+  image_resolution: [40, 40]
+
+# 65x65
+medium_3parents_silu_65:
+  connectivity: 3
+  hidden_layers: 2
+  activation: 'silu'
+  use_positional: false
+  image_resolution: [65, 65]
+
+medium_3parents_silu_pos_65:
+  connectivity: 3
+  hidden_layers: 2
+  activation: 'silu'
+  use_positional: true
+  image_resolution: [65, 65]
+
+# Medium model variants with 8 parents
+# 20x20
+medium_8parents_relu_20:
+  connectivity: 8
+  hidden_layers: 2
+  activation: 'relu'
+  use_positional: false
+  image_resolution: [20, 20]
+
+medium_8parents_relu_pos_20:
+  connectivity: 8
+  hidden_layers: 2
+  activation: 'relu'
+  use_positional: true
+  image_resolution: [20, 20]
+
+# 40x40
+medium_8parents_relu_40:
+  connectivity: 8
+  hidden_layers: 2
+  activation: 'relu'
+  use_positional: false
+  image_resolution: [40, 40]
+
+medium_8parents_relu_pos_40:
+  connectivity: 8
+  hidden_layers: 2
+  activation: 'relu'
+  use_positional: true
+  image_resolution: [40, 40]
+
+# 65x65
+medium_8parents_relu_65:
+  connectivity: 8
+  hidden_layers: 2
+  activation: 'relu'
+  use_positional: false
+  image_resolution: [65, 65]
+
+medium_8parents_relu_pos_65:
+  connectivity: 8
+  hidden_layers: 2
+  activation: 'relu'
+  use_positional: true
+  image_resolution: [65, 65]
+
+# Medium model variants with 15 parents
+# 20x20
+medium_15parents_relu_20:
+  connectivity: 15
+  hidden_layers: 2
+  activation: 'relu'
+  use_positional: false
+  image_resolution: [20, 20]
+
+medium_15parents_relu_pos_20:
+  connectivity: 15
+  hidden_layers: 2
+  activation: 'relu'
+  use_positional: true
+  image_resolution: [20, 20]
+
+# 40x40
+medium_15parents_relu_40:
+  connectivity: 15
+  hidden_layers: 2
+  activation: 'relu'
+  use_positional: false
+  image_resolution: [40, 40]
+
+medium_15parents_relu_pos_40:
+  connectivity: 15
+  hidden_layers: 2
+  activation: 'relu'
+  use_positional: true
+  image_resolution: [40, 40]
+
+# 65x65
+medium_15parents_relu_65:
+  connectivity: 15
+  hidden_layers: 2
+  activation: 'relu'
+  use_positional: false
+  image_resolution: [65, 65]
+
+medium_15parents_relu_pos_65:
+  connectivity: 15
+  hidden_layers: 2
+  activation: 'relu'
+  use_positional: true
+  image_resolution: [65, 65]
+
+# Linear model variants for 40x40 and 65x65 resolutions
+# 40x40
+linear_3parents_40:
+  connectivity: 3
+  hidden_layers: 0
+  activation: 'relu'
+  use_positional: false
+  image_resolution: [40, 40]
+
+linear_3parents_pos_40:
+  connectivity: 3
+  hidden_layers: 0
+  activation: 'relu'
+  use_positional: true
+  image_resolution: [40, 40]
+
+# 65x65
+linear_3parents_65:
+  connectivity: 3
+  hidden_layers: 0
+  activation: 'relu'
+  use_positional: false
+  image_resolution: [65, 65]
+
+linear_3parents_pos_65:
+  connectivity: 3
+  hidden_layers: 0
+  activation: 'relu'
+  use_positional: true
   image_resolution: [65, 65] 
